增加了状态机

--- a/管理文件清单.md
+++ b/管理文件清单.md
@@ -3,11 +3,15 @@
 ##一级文件：章程级
 1. 北京学门科技有限公司章程
 1. 章程实施细则
-
+1. framework.sql
 
 ##二级文件：基本制度级
 1. 基本管理制度
 1. 管理文件清单
 1. 角色清单
+1. xuemen.sql
 
 ##三级文件：项目级
+1. 客户服务流程
+1. bug管理流程
+1. 
