--- a/章程实施细则.md
+++ b/章程实施细则.md
@@ -1,1 +1,33 @@
 #章程实施细则
+
+1. 公司的有限状态机定义：
+	- 状态集：{S1：休眠，S2：发展，S3：稳定，S4：拓展}
+	- 目前状态：S2
+	- 输入集：{Ii}
+		1. 现金超过10万
+		1. 基本项目收支平衡
+		1. 完成新行业建模
+		1. 现金断流
+	- 输出集：{Oi}
+		1. 启动基本项目
+		1. 增加基本项目
+		1. 召开股东会
+		1. 召开董事会
+	- 状态变换：{Fi}
+		1. S1,I1 -> S2,O1,O4
+		1. S2,I2 -> S3,O3
+		1. S3,I3 -> S4,O2,O3,O4
+		1. S2,I4 -> S1,O3
+		1. S3,I4 -> S1,O3
+		1. S4,I4 -> S1,O3
+
+1. S1：休眠状态
+	1. 进入时O3：召开股东会，整理公司文件，清算债务，选举一名股东担任经理。
+	1. 经理负责办理工商税务手续，维持公司运行。
+	1. 休眠期间支出由经理垫付，记为公司向个人借款。
+1. S2：发展状态
+	1. 
+1. 内部管理使用sql语言进行数学建模，描述利益分配规则。遵循mysql的语法。
+1. 经理提出公司的数学模型，经董事会批准后生效。
+1. 经理提出公司内部指标体系，明确定义内部指标和现金、内部指标之间的数学关系，经董事会批准生效。
+
