增加库房、服务器、办公室。

--- a/章程实施细则.md
+++ b/章程实施细则.md
@@ -1,12 +1,17 @@
 #章程实施细则
 
+1. 公司运行库房、办公室、服务器三种基本设施。
+1. 库房管理员、服务器管理员由董事会任免。
+1. 库房管理、服务器管理属于基本管理制度。
+
 1. 公司的有限状态机定义：
 	- 状态集：{S1：休眠，S2：发展，S3：稳定，S4：拓展}
 	- 目前状态：S2
 	- 输入集：{Ii}
 		1. 现金超过10万
-		1. 基本项目收支平衡
-		1. 完成新行业建模
+		1. 基本项目收入稳定
+		1. 基本项目收入增加
+		1. 董事会通过新行业建模
 		1. 现金断流
 	- 输出集：{Oi}
 		1. 启动基本项目
@@ -15,18 +20,22 @@
 		1. 召开董事会
 	- 状态变换：{Fi}
 		1. S1,I1 -> S2,O1,O4
-		1. S2,I2 -> S3,O3
-		1. S3,I3 -> S4,O2,O3,O4
-		1. S2,I4 -> S1,O3
-		1. S3,I4 -> S1,O3
-		1. S4,I4 -> S1,O3
+		1. S2,I2 -> S3,O3（更新利润分配方式）
+		1. S3,I3 -> S2,O4（更新经营计划、基本管理制度）
+		1. S2,I4 -> S4,O2,O3,O4
+		1. S3,I4 -> S4,O2,O3,O4
+		1. S2,I5 -> S1,O3
+		1. S3,I5 -> S1,O3
+		1. S4,I5 -> S1,O3
 
 1. S1：休眠状态
 	1. 进入时O3：召开股东会，整理公司文件，清算债务，选举一名股东担任经理。
 	1. 经理负责办理工商税务手续，维持公司运行。
+	1. 休眠期间经理有权关闭办公室。只保留库房和服务器。
 	1. 休眠期间支出由经理垫付，记为公司向个人借款。
 1. S2：发展状态
 	1. 
+1. 管理制度所有条款必须注明授权来源。
 1. 内部管理使用sql语言进行数学建模，描述利益分配规则。遵循mysql的语法。
 1. 经理提出公司的数学模型，经董事会批准后生效。
 1. 经理提出公司内部指标体系，明确定义内部指标和现金、内部指标之间的数学关系，经董事会批准生效。
