--- a/管理文件清单.md
+++ b/管理文件清单.md
@@ -7,9 +7,14 @@
 
 ##二级文件：基本制度级
 1. 基本管理制度
+1. 库房管理制度
+1. 服务器管理制度
 1. 管理文件清单
 1. 角色清单
 1. xuemen.sql
+
+##三级文件：部门级
+1. 办公室管理制度
 
 ##三级文件：项目级
 1. 客户服务流程
