--- a/管理文件清单.md
+++ b/管理文件清单.md
@@ -1,9 +1,8 @@
 #管理文件清单
 
 ##一级文件：章程级
-1. 北京学门科技有限公司章程
+1. 公司章程
 1. 章程实施细则
-1. framework.sql
 
 ##二级文件：基本制度级
 1. 基本管理制度
@@ -15,8 +14,13 @@
 
 ##三级文件：部门级
 1. 办公室管理制度
+1. 财务管理制度
+1. 人力资源管理制度
 
 ##三级文件：项目级
+1. 开发管理制度
+1. 委托开发项目管理制度
+1. 自营产品管理制度
 1. 客户服务流程
 1. bug管理流程
 1. 
