明确经理和董事会、监事在S3、S4状态下的管理权力。
Signed-off-by: huangyg <huangyg@xuemen.com>

--- a/章程实施细则.md
+++ b/章程实施细则.md
@@ -13,13 +13,17 @@
 	1. 休眠状态支出由经理垫付，记为公司向个人借款。
 	1. 离开时由股东会重建办公室，统计债务，制定偿还方案。
 1. S2：发展状态
-	1. 经理每个月向监事、董事会汇报工作。
-	1. 每三个月召开一次董事会，整理规章制度。
+	1. 经理可以行政公文临时分配权利。
+	1. 经理可以提交规章制度，权利分配规则。需董事会审批的方案时，要同时提议召开董事会。
+	1. 经理每个月向监事、董事会书面汇报工作。
 1. S3：稳定或缩减状态
-	1. 经理要提出完整的规章制度。
-	1. 经理要提出权利分配的数学模型以及代码实现，经董事会批准后部署到服务器运行。
+	1. 公司严格按照规章制度，权利分配规则运行。
+	1. 经理上任前要提出完整的规章制度。
+	1. 经理要提出权利分配规则的数学模型以及代码实现，经董事会批准后部署到服务器运行。
+	1. 董事、监事可以调阅服务器的源代码。
+	1. 董事、监事可以通过服务器实时调阅财务有关数据。
 1. S4：拓展
-	1. 新行业按照发展状态运行。
-	1. 经理要提出跨行业管理的规章和权利分配模型、代码实现。
+	1. 新行业按照“发展状态”运行。
+	1. 各行业公用的管理规章和权利分配模型、代码实现，按照“稳定或缩减状态”运行。
 1. 管理制度要明确适用的公司状态，状态切换时自动启用。
 1. 量化的规则应使用sql语言，遵循mysql的语法。
