开始编写文件编号、库房管理，增加了几个文件。

--- a/基本管理制度.md
+++ b/基本管理制度.md
@@ -1,9 +1,11 @@
 #基本管理制度
 
-##库房管理
-1. 库房存放以下物品：
-	- 已退市的产品卷宗
-	- 不再合作的人员档案
-	- 十年以上的财务账簿
-	- 日常工作中不再使用的其它文档、物品。
+1. 
+##角色与权限
 
+1. 
+##产品点
+1. 
+##外勤点
+1. 
+##内务点
