--- a/管理文件清单.md
+++ b/管理文件清单.md
@@ -1,21 +1,24 @@
 #管理文件清单
 
 ##一级文件：章程级
-1. 公司章程
-1. 章程实施细则
+1. [1-1]公司章程
+1. [1-2]章程实施细则
 
 ##二级文件：基本制度级
-1. 基本管理制度
-1. 库房管理制度
-1. 服务器管理制度
-1. 管理文件清单
-1. 角色清单
+1. [2-1]基本管理制度
+1. [2-2]服务器管理制度
+1. [2-3]库房管理制度
+1. [2-4]管理文件清单
+1. [2-5]管理记录清单
+1. [2-6]人员角色清单
 1. xuemen.sql
 
 ##三级文件：部门级
 1. 办公室管理制度
 1. 财务管理制度
 1. 人力资源管理制度
+1. 文档编号规则
+1. 字典
 
 ##三级文件：项目级
 1. 开发管理制度
