按照编号规则命名

--- a/3-4.文档编号规则.md
+++ b/3-4.文档编号规则.md
@@ -5,9 +5,10 @@
 	L-管理文件所在层次。  
 	n-流水号  
 	xxx-文件后缀  
-	例如：**1-2.章程实施细则.md**
+	例如：  
+	**1-2.章程实施细则.md**  
 
-	1. 数据库脚本直接在**[2-4]管理文件清单.md**中命名。  
+	1. 数据库脚本直接在**2-4.管理文件清单.md**中命名。  
 
 1. 管理记录  
 	1.
