--- a/2-4.管理文件清单.md
+++ b/2-4.管理文件清单.md
@@ -14,16 +14,16 @@
 1. xuemen.sql
 
 ##三级文件：部门级
-1. 办公室管理制度
-1. 财务管理制度
-1. 人力资源管理制度
-1. 文档编号规则
-1. 字典
+1. [3-1]办公室管理制度
+1. [3-2]财务管理制度
+1. [3-3]人力资源管理制度
+1. [3-4]文档编号规则
+1. [3-5]字典
 
 ##三级文件：项目级
-1. 开发管理制度
-1. 委托开发项目管理制度
-1. 自营产品管理制度
-1. 客户服务流程
-1. bug管理流程
+1. [3-11]开发管理制度
+1. [3-12]委托开发项目管理制度
+1. [3-13]自营产品管理制度
+1. [3-14]客户服务流程
+1. [3-15]bug管理流程
 1. 
