--- a/2-4.文件清单.md
+++ b/2-4.文件清单.md
@@ -1,4 +1,4 @@
-#管理文件清单
+#文件清单
 
 ##一级文件：章程级
 1. [1-1]公司章程
@@ -8,8 +8,8 @@
 1. [2-1]基本管理制度
 1. [2-2]服务器管理制度
 1. [2-3]库房管理制度
-1. [2-4]管理文件清单
-1. [2-5]管理记录清单
+1. [2-4]文件清单
+1. [2-5]记录清单
 1. [2-6]人员角色清单
 1. xuemen.sql
 
@@ -17,7 +17,7 @@
 1. [3-1]办公室管理制度
 1. [3-2]财务管理制度
 1. [3-3]人力资源管理制度
-1. [3-4]文档编号规则
+1. [3-4]文件命名规则
 1. [3-5]字典
 
 ##三级文件：项目级
