--- a/3-5.字典.md
+++ b/3-5.字典.md
@@ -4,6 +4,8 @@
 <table border>
 <tr><th>中文全称</th><th>英文全称</th><th>英文缩写</th></tr>
 <tr><td>库房</td><td>Backup Repository</td><td>BKR</td></tr>
+<tr><td>产品</td><td>Product</td><td>P1</td></tr>
+<tr><td>项目</td><td>Project</td><td>P2</td></tr>
 </table>
 1. sql脚本
 
