--- a/2-5.记录清单.md
+++ b/2-5.记录清单.md
@@ -12,5 +12,5 @@
 	<table border>
 	<tr><th>中文全称</th><th>英文全称</th><th>英文缩写</th></tr>
 	<tr><td>项目配置备忘</td><td>Project Configuration Memo</td><td>P2CM</td></tr>
-	<tr><td>项目字典</td><td>Project Dictionary</td><td>P2D</td></tr>
+	<tr><td>技术机制说明书</td><td>Technical Mechanisms Instructions</td><td>TMI</td></tr>
 	</table>
