--- a/3-11.开发管理制度.md
+++ b/3-11.开发管理制度.md
@@ -18,7 +18,6 @@
 	- 技术机制清单
 1. 界面设计：
 	- 各版式下的html文件。
-	- 
 1. 沟通管理
 
 ###设计
@@ -26,9 +25,8 @@
 1. 技术机制说明书
 
 ###开发
-1. 由服务器管理员统一管理开发数据库的运维。数据库设计的改动必须经过版本库提交。
-1. 
-
+1. 由DBA统一管理开发数据库。数据库设计的改动必须经过版本库提交。
+1. 由服务器管理员负责开发部署，主程序员有权下达部署工单。
 
 ##版本管理
 ###文件夹结构
