--- a/2-5.记录清单.md
+++ b/2-5.记录清单.md
@@ -14,4 +14,5 @@
 	<tr><td>项目配置备忘</td><td>Project Configuration Memo</td><td>P1CM</td></tr>
 	<tr><td>技术机制说明书</td><td>Technical Mechanisms Instructions</td><td>TMI</td></tr>
 	<tr><td>部署工单</td><td>Deployment Order</td><td>DOR</td></tr>
+	<tr><td>缺陷登记单</td><td>Issue Submit Form</td><td>ISF</td></tr>
 	</table>
