add label in record filename

--- a/3-04.文件命名规则.md
+++ b/3-04.文件命名规则.md
@@ -11,15 +11,20 @@
 	1. 数据库脚本直接在**2-4.管理文件清单.md**中命名。  
 
 1. 管理记录  
-	1. 文本文件电子版文件名：**[ppp.]eee[.ccc][.nnn].xxx**  
+	1. 文本文件电子版文件名：**[ppp.]eee[.ccc][.label][.nnn].xxx**  
 	ppp- 项目英文缩写，不属于项目的不用写。  
 	eee- 记录种类英文缩写  
 	ccc- 中文名称，可选  
-	nnn- 流水号。项目文件在项目内唯一。不写就是管理记录模板。  
+	label- 
+	* list- 该类记录清单  
+	* readmd- 该类记录处理指南  
+	* module- 该类记录模板  
+
+	nnn- 流水号。项目文件在项目内唯一。  
 	xxx- 文件后缀  
 	例如：  
-	**P2CM.md**是《项目配置备忘》记录模板。  
-	**EODSaaS.P2CM.2.md**是EODSaaS项目的第2个项目经理发布的《项目配置备忘》记录。
+	**P1CM.module.md**是《项目配置备忘》记录模板。  
+	**EODSaaS.P1CM.2.md**是EODSaaS项目的第2个项目经理发布的《项目配置备忘》记录。
 	
 	1.
 
