--- a/3-04.文件命名规则.md
+++ b/3-04.文件命名规则.md
@@ -15,15 +15,11 @@
 	ppp- 项目英文缩写，不属于项目的不用写。  
 	eee- 记录种类英文缩写  
 	ccc- 中文名称，可选  
-	label- 
-	* list- 该类记录清单  
-	* readmd- 该类记录处理指南  
-	* module- 该类记录模板  
-
+	label- List:该类记录清单;Readme:该类记录处理指南;Template:该类记录模板  
 	nnn- 流水号。项目文件在项目内唯一。  
 	xxx- 文件后缀  
 	例如：  
-	**P1CM.module.md**是《项目配置备忘》记录模板。  
+	**P1CM.Template.md**是《项目配置备忘》记录模板。  
 	**EODSaaS.P1CM.2.md**是EODSaaS项目的第2个项目经理发布的《项目配置备忘》记录。
 	
 	1.
