临时规章的无限责任及保底任务

--- a/1-2.章程实施细则.md
+++ b/1-2.章程实施细则.md
@@ -12,8 +12,9 @@
 	1. 休眠状态支出由经理垫付，记为公司向个人借款。
 	1. 离开时由股东会重建办公室，统计债务，制定偿还方案。
 1. S2：发展状态
-	1. 经理可以行政公文临时分配权利。
+	1. 经理可以行政公文临时分配权利，但要对其损失承担无限责任。
 	1. 经理可以提交规章制度，权利分配规则。需董事会审批的方案时，要同时提议召开董事会。
+	1. 无人承担的任务均由经理承担。当这种情形发生时，按300%计算报酬。
 	1. 经理每个月向监事、董事会书面汇报工作。
 1. S3：稳定或缩减状态
 	1. 公司严格按照规章制度，权利分配规则运行。
