--- a/1-2.章程实施细则.md
+++ b/1-2.章程实施细则.md
@@ -1,8 +1,6 @@
 #章程实施细则
 
-1. 公司运行库房、办公室、服务器三种基本设施。  
-1. 库房管理员、服务器管理员由董事会任免。  
-1. 库房管理、服务器管理属于基本管理制度。  
+1. 公司运行协作网络、信任网络、联合提货权三种基础设施。  
 1. 公司分为几种状态{S1：休眠，S2：增长，S3：稳定或缩减，S4：拓展}。其中S4是指进入新行业。
 1. 由股东会决定当前状态。
 1. S1：休眠状态
