--- a/S2/2-4.联合产品部模型.md
+++ b/S2/2-4.联合产品部模型.md
@@ -12,21 +12,33 @@
 3. 产品配置备忘录(P2CM:Product Configuration Memo)
 4. 预购意见
 5. 预购权重调整方案
-
+6. 工作计划及预算方案
+7. 工作总结及结算方案
+8. 结项方案
 
 ###接口
-1. 立项申请
-2. 预售
-3. 里程碑审议
+1. 产品立项
+2. 里程碑审议
+3. 预售
 4. 预购
-5. 
-6. Infra项目
-	* 需求审议
-	* 开发
-	* 测试
-	* 发布
+5. 产品管理
+6. 产品结项
+7. Infra项目
 
 ###流程
+* 产品立项
+	1. 产品立项者提交《产品模型》、《产品配置备忘录》、产品正式发布前各阶段的《工作计划及预算方案》，并向JPU的JT专户支付一笔申请费，该申请费为所有阶段预售产品总价的5%；
+	2. 产品总监审核后提交《审议记录》：
+		* 如果驳回，申请费退还产品立项者；
+		* 如果通过，申请费转入产品的JT专户，视为产品立项者预购；
+	3. 立项审议通过后，产品团队成立，产品立项者可任命产品经理。
+
+* 里程碑审议：
+	1. 产品经理提交该阶段的《工作总结及结算方案》；
+	2. 如果该阶段没有完成预算，则产品归JPU所有，此后由JPU作为产品立项者，由当前活跃产品的产品立项者以产品JT专户金额为权重选举产品经理；
+	3. 如果里程碑设置了财务以外的验收标准，由产品总监安排审议程序和审议者；
+	4. 审议者提交《审议记录》，对验收标准做出判定，供预购者参考；
+
 * 预售：
 	1. 立项申请时，产品立项者可以在P2CM中设定一系列的里程碑、阶段预算、验收标准，以及各阶段产品预售价格、数量；
 	2. 产品中应使用统一的绑定代码；绑定的JT自动账户应使用统一的预售处理代码；
@@ -36,18 +48,48 @@
 	4. 产品团队成员均接受：无论预售结果如何，都按照P2CM设定完成所有里程碑；
 	5. 当产品正式发布时，正式销售收入按成交时间顺序转给预购者，全部预购者获得收益后才留存产品的JT专户。
 
-* 里程碑审议：
-	1. 
 * 预购：
 	1. 除产品总监外，任何成员都有预购权重，初始值为0；
-	2. 当所审议的预购获得收益后，对预购权重进行调整。《预购权重调整方案》由产品总监制定，提前公布哈希码，调整后公布明文；
+	2. 当出现以下情况时，这个阶段的预购完成：
+		* 兑现：所有预购者获得对应的正式销售收入；
+		* 失败：产品结项，该阶段预购没有全部兑现。
+	3. 预购兑现时，JPU的JT专户以收益的50%分配给提交《预购意见》并明确应该购入的成员：
+		* 25%平均分配；
+		* 25%按提交《预购意见》时的预购权重加权分配。
+	4. 预购完成后，对预购权重进行调整。《预购权重调整方案》由产品总监制定，提前公布哈希码，调整后公布明文；
 	3. 任何成员可以对任何产品各里程碑提交《预购意见》，明确是否购入预售产品；
 	4. 预期购买量 = R1*Amount/R ，其中：
 		* R1: 提交《预购意见》并明确应该购入的成员的预购权重之和
 		* R: 提交《预购意见》的成员的预购权重之和
 		* Amount：旧阶段的预售产品余额
 	5. 实际购买量：如果JPU的JT专户余额足以购买“预期购买量”，则按“预期购买量”购买；否则按JT专户余额购买；
-	6. 如果没有成员针对某产品某里程碑提交《预购意见》，则由产品总监决定是否预购、预购数量。
+	6. 如果预期购买量公式中的 R=0 ，则由产品总监决定是否预购、预购数量。
+
+* 产品管理：
+	1. 产品经理有权修订《产品模型》；
+	2. 在产品正式发布后，产品经理有权修订《产品配置备忘录》；
+	3. 每个里程碑审议前，产品经理要提交下一阶段的《工作计划及预算方案》；
+	4. 其它事务按《产品模型》处理。
+
+* 产品结项：
+	1. 产品立项者可以发布《结项方案》；
+	2. 《结项方案》公示一个月：
+		* 如果没有发现违背现有规章、契约，则按方案处理结项事务；
+		* 如果被发现违背现有规章、契约，则由产品总监修改后执行。
+
+* Infra项目：
+	1. Infra项目由产品总监作为产品立项者；
+	2. Infra项目成果供JPU各产品免费使用；
+	3. JT发行代码直接向Infra项目专户拨款，作为项目成员的报酬：
+		* 每月拨付 8192JT
+		* 每季度拨付总流通额的1%
 
 ###分配
-1.
+1. 产品总监的以下报酬从JPU的JT专户中支付，余额不足时不支付：
+	* 审核产品立项提交的《审议记录》：1024 JT/份
+	* 组织里程碑审议： 256 JT/次
+	* 预期购买量公式中的 R=0时决定是否预购、预购数量：预购兑现时，JPU的JT专户以收益的50%
+	* 修改《结项方案》：1024 JT/份
+	* 连续十二个月没有违规行为：16394 JT
+2. 产品总监的以下报酬由JT发行代码直接：
+	* 一个月没有违规行为：1024 JT
