--- a/S2/3-05.字典.md
+++ b/S2/3-05.字典.md
@@ -12,6 +12,7 @@
 	<tr><th>中文全称</th><th>英文全称</th><th>英文缩写</th></tr>
 	<tr><td>库房调取单</td><td>Backup Repository Pull Form</td><td>BKR-2</td></tr>
 	<tr><td>产品数学模型</td><td>Product Mathematical Model</td><td>PMM</td></tr>
+	<tr><td>Token决算数据包</td><td>Token Balance Package</td><td>TBP</td></tr>
 	</table>
 
 1. 项目记录清单
