--- a/1-2.章程实施细则.md
+++ b/1-2.章程实施细则.md
@@ -10,7 +10,7 @@
 		4. 离开时编制财务会计报告，由股东会重建董事会，制定补偿方案：
 			* 公司向执行董事借款的利息及偿还方案；
 			* 执行董事所承担工作的报酬。
-	1. S2：发展状态
+	1. S2：增长状态
 		1. 进入时由董事会选聘经理。董事会可将部分职权授予经理，并规定行使这些职权的方式和时限，以及相应的奖惩办法。
 		2. 无人承担的任务均由经理承担。当这种情形发生时，按300%计算报酬。
 		3. 经理每个月向监事、董事会书面汇报工作。
