每版本预售

--- a/S2/2-4.联合产品部模型.md
+++ b/S2/2-4.联合产品部模型.md
@@ -67,7 +67,7 @@
 
 * 产品管理：
 	1. 产品经理有权修订《产品模型》；
-	2. 在产品正式发布后，产品经理有权修订《产品配置备忘录》；
+	2. 在每个版本的产品正式发布后，产品经理有权修订《产品配置备忘录》，可以提出下一版本预售相关的内容；
 	3. 每个里程碑审议前，产品经理要提交下一阶段的《工作计划及预算方案》；
 	4. 其它事务按《产品模型》处理。
 
