--- a/S2/2-4.联合产品部模型.md
+++ b/S2/2-4.联合产品部模型.md
@@ -46,7 +46,6 @@
 		* 新阶段的预售产品即发布，JT持有者可以直接购买；
 		* 旧阶段的预售产品余额，根据投资审议结果由JPU购买。
 	4. 产品团队成员均接受：无论预售结果如何，都按照P2CM设定完成所有里程碑；
-	5. 当产品正式发布时，正式销售收入按成交时间顺序转给预购者，全部预购者获得收益后才留存产品的JT专户。
 
 * 预购：
 	1. 除产品总监外，任何成员都有预购权重，初始值为0；
@@ -64,6 +63,9 @@
 		* Amount：旧阶段的预售产品余额
 	5. 实际购买量：如果JPU的JT专户余额足以购买“预期购买量”，则按“预期购买量”购买；否则按JT专户余额购买；
 	6. 如果预期购买量公式中的 R=0 ，则由产品总监决定是否预购、预购数量。
+	7. 当产品正式发布时，预购者可以选择：
+		* 提货：直接提取产品。
+		* 兑现：委托代售，正式销售收入的95%按成交时间顺序转给预购者，销售收入的5%作为兑现手续费归JPU专户。全部预购者获得收益后才留存产品的JT专户。
 
 * 产品管理：
 	1. 产品经理有权修订《产品模型》；
