1. "每季度拨付总流通额的1%"可能需要调整。 2. ISU扩散后与JPU的一对多关系，各ISU之间互联互通，再斟酌一下。

--- a/S2/2-1.全局模型.md
+++ b/S2/2-1.全局模型.md
@@ -41,8 +41,8 @@
 * 预算：
 	1. Kernel、JPU提出《内务需求》；
 	2. Kernel与ISU协商后制定《内务工作计划以及预算方案》，该方案应考虑ISU如何避免赤字；
-	3. Kernel按预算方案发行ISU；
-	4. JPU、ISU通过兑换或借贷从Kernel获得ISU。
+	3. Kernel按预算方案发行IST；
+	4. JPU、ISU通过兑换或借贷从Kernel获得IST。
 * 成员加入：
 	1. 股东角色按照公司法办理手续，其它角色均按照数学模型加入、退出。
 	2. 所有角色使用统一的节点软件参与协作。
@@ -60,4 +60,4 @@
 		* 使用知识产权：4096 IST/个*年
 	3. 服务器+二级域名：
 		* 4096 IST/个*年
-	4. 其它服务项目及价格由IST拟定，Kernel批准后生效。
+	4. 其它服务项目及价格由ISU拟定，Kernel批准后生效。
