--- a/S2/2-2.核心模型.md
+++ b/S2/2-2.核心模型.md
@@ -20,7 +20,7 @@
 	1. 经理向其它角色了解后提出Kernel的《内务需求》；
 	2. 董事会收齐Kernel、JPU的《内务需求》后，与ISU协商后制订《内务工作计划以及预算方案》；
 	3. 股东会审议批准《内务工作计划以及预算方案》后，各股东提交《审议记录》（含数字签名），提交ISU发行代码处理；
-	4. 经理管理Kerlnel的ISU专户，以兑换或借贷等方式提供给JPU、ISU。
+	4. 经理管理Kernel的IST专户，以兑换或借贷等方式提供给JPU、ISU。
 * 监督：
 	* 监事检查董事、经理、财务负责人是否按规章制度、数学模型行使职权；
 	* 按公司法处理违规行为。
