--- a/S2/3-02.财务管理制度.md
+++ b/S2/3-02.财务管理制度.md
@@ -7,3 +7,15 @@
 	3. 工作记录要求：明确列出财务相关的纸质表单、电子文件目录，细化填写要求、文件命名和保存方式。确保利用记录可以重建工作。管理纸质记录。
 	4. 工作流程：明确财务相关工作的流程要求，文件应易于理解、易于操作、无二义性。
 	5. 数据交换需求：根据GB/T 24589-2010《会计核算软件数据接口》制定产品与财务软件的数据交换需求。
+
+### 会计核算规则
+#### 会计科目
+#### 报表格式
+#### 收支项目
+#### 对应关系
+
+
+### 税务规划
+### 工作记录要求
+### 工作流程
+### 数据交换需求
