提交历史版本，准备下一阶段工作。

--- a/1-2.章程实施细则.md
+++ b/1-2.章程实施细则.md
@@ -1,6 +1,6 @@
 #章程实施细则
 
-1. 公司设计联合产品部(JPU:Joint Product Unit)的数学模型及代码实现。JPU运行协作网络、信任网络、联合提货权三大基础设施。
+1. 公司制定产品部(IPU:Inner Product Unit)的规章制度，参与JPU（Joint Product Unit）。
 2. 公司制定内务部(ISU:Inner Service Unit)的规章制度，任命ISU人员，委托ISU管理公司的资产（办公室、服务器及域名、人民币、内部记账单位、知识产权）。
 3. 公司分为几种状态{S1：休眠，S2：增长，S3：稳定或缩减，S4：拓展}。
 	* S1：休眠状态
