--- a/S2/3-05.字典.md
+++ b/S2/3-05.字典.md
@@ -10,9 +10,18 @@
 1. 管理记录种类
 	<table border>
 	<tr><th>中文全称</th><th>英文全称</th><th>英文缩写</th></tr>
+	<tr><td>通用工单</td><td>General Order</td><td>GOR</td></tr>
+	<tr><td>通用日志</td><td>General Log</td><td>GLOG</td></tr>
+	<tr><td>审议记录</td><td>General Review Record</td><td>GRR</td></tr>
 	<tr><td>库房调取单</td><td>Backup Repository Pull Form</td><td>BKR-2</td></tr>
 	<tr><td>产品数学模型</td><td>Product Mathematical Model</td><td>PMM</td></tr>
+	<tr><td>Token交易委托</td><td>Token Exchange Order</td><td>TEO</td></tr>
+	<tr><td>Token交易记录</td><td>Token Exchange Record</td><td>TER</td></tr>
 	<tr><td>Token决算数据包</td><td>Token Balance Package</td><td>TBP</td></tr>
+	<tr><td>会计凭证</td><td>Accounting Voucher Record</td><td>AVR</td></tr>
+	<tr><td>会计分录规则</td><td>Accounting Entry Code</td><td>AEC</td></tr>
+	<tr><td>会计分录记录</td><td>Accounting Entry Record</td><td>AER</td></tr>
+
 	</table>
 
 1. 项目记录清单
