--- a/S2/3-05.字典.md
+++ b/S2/3-05.字典.md
@@ -1,13 +1,35 @@
 #字典
 
 1. 对应表
-<table border>
-<tr><th>中文全称</th><th>英文全称</th><th>英文缩写</th></tr>
-<tr><td>库房</td><td>Backup Repository</td><td>BKR</td></tr>
-<tr><td>产品</td><td>Product</td><td>P2</td></tr>
-<tr><td>项目</td><td>Project</td><td>P1</td></tr>
-</table>
-1. sql脚本
+	<table border>
+	<tr><th>中文全称</th><th>英文全称</th><th>英文缩写</th></tr>
+	<tr><td>库房</td><td>Backup Repository</td><td>BKR</td></tr>
+	<tr><td>产品</td><td>Product</td><td>P2</td></tr>
+	<tr><td>项目</td><td>Project</td><td>P1</td></tr>
+	</table>
+1. 管理记录种类
+	<table border>
+	<tr><th>中文全称</th><th>英文全称</th><th>英文缩写</th></tr>
+	<tr><td>通用工单</td><td>General Order</td><td>GOR</td></tr>
+	<tr><td>通用日志</td><td>General Log</td><td>GLOG</td></tr>
+	<tr><td>审议记录</td><td>General Review Record</td><td>GRR</td></tr>
+	<tr><td>库房调取单</td><td>Backup Repository Pull Form</td><td>BKR-2</td></tr>
+	<tr><td>产品数学模型</td><td>Product Mathematical Model</td><td>PMM</td></tr>
+	<tr><td>Token交易委托</td><td>Token Exchange Order</td><td>TEO</td></tr>
+	<tr><td>Token交易记录</td><td>Token Exchange Record</td><td>TER</td></tr>
+	<tr><td>Token决算数据包</td><td>Token Balance Package</td><td>TBP</td></tr>
+	<tr><td>会计凭证</td><td>Accounting Voucher Record</td><td>AVR</td></tr>
+	<tr><td>会计分录规则</td><td>Accounting Entry Code</td><td>AEC</td></tr>
+	<tr><td>会计分录记录</td><td>Accounting Entry Record</td><td>AER</td></tr>
 
-    insert into d ()
+	</table>
 
+1. 项目记录清单
+	<table border>
+	<tr><th>中文全称</th><th>英文全称</th><th>英文缩写</th></tr>
+	<tr><td>项目配置备忘</td><td>Project Configuration Memo</td><td>P1CM</td></tr>
+	<tr><td>产品配置备忘</td><td>Product Configuration Memo</td><td>P2CM</td></tr>
+	<tr><td>技术机制说明书</td><td>Technical Mechanisms Instructions</td><td>TMI</td></tr>
+	<tr><td>部署工单</td><td>Deployment Order</td><td>DOR</td></tr>
+	<tr><td>缺陷登记单</td><td>Issue Submit Form</td><td>ISF</td></tr>
+	</table>
