--- a/1-2.章程实施细则.md
+++ b/1-2.章程实施细则.md
@@ -1,28 +1,56 @@
-#章程实施细则
+# 章程实施细则
 
-1. 公司制定产品部(IPU:Inner Product Unit)的规章制度，参与JPU（Joint Product Unit）。
-2. 公司制定内务部(ISU:Inner Service Unit)的规章制度，任命ISU人员，委托ISU管理公司的资产（办公室、服务器及域名、人民币、内部记账单位、知识产权）。
-3. 公司分为几种状态{S1：休眠，S2：增长，S3：稳定或缩减，S4：拓展}。
-	* S1：休眠状态
-		1. 进入时编制财务会计报告，由股东会选举一名执行董事，执行董事兼任公司经理。
-		2. 执行董事不定期向全体股东报告工作。
-		3. 当出现赤字时，支出由执行董事垫付，记为公司向个人借款。
-		4. 离开时编制财务会计报告，由股东会重建董事会，制定补偿方案：
-			* 公司向执行董事借款的利息及偿还方案；
-			* 执行董事所承担工作的报酬。
-	1. S2：增长状态
-		1. 进入时由董事会选聘经理。董事会可将部分职权授予经理，并规定行使这些职权的方式和时限，以及相应的奖惩办法。
-		2. 无人承担的任务均由经理承担。当这种情形发生时，按300%计算报酬。
-		3. 经理每个月向监事、董事会书面汇报工作。
-	1. S3：稳定或缩减状态
-		1. 公司严格按照规章制度、数学模型运行。
-		2. 公司规章制度、数学模型的代码实现由董事会批准方才生效。
-		3. 董事、监事可以调阅规章制度、数学模型的代码实现。
-	1. S4：拓展状态
-		1. 新业务按照“发展状态”运行。
-		1. 各业务公用的管理规章和数学模型、代码实现，按照“稳定或缩减状态”运行。
-4. 股东会行使以下职权：决定公司当前状态（进入S4时须明确定义新业务范围）。
-5. 行使以下职权时须明确适用的状态，以便状态切换时自动启用：
-	* 决定公司内部管理机构的设置；
-	* 制定公司的基本管理制度；
-	* 决定聘任或者解聘公司经理及其报酬事项，并根据经理的提名决定聘任或者解聘公司副经理、财务负责人及其报酬事项；
+ 根据公司法第五十九条、章程第八条（一）决定：公司分为三种状态{S1：休眠，S2：增长，S3：稳定或缩减}，由股东会决定当前状态。董事会行使公司法第六十七条（七）（八）（九）、章程第十五条（八）（九）（十）所列职权时须明确适用的状态，以便状态切换时自动启用。
+
+1. S1：休眠状态
+	1. 根据公司法第五十九条（一）、（八）、第七十一条、第七十五条、章程第八条（二）、（十）决定：在进入S1状态时，章程第十四条改为“公司不设董事会，设一名董事，行使公司法和章程规定的董事会的职权。该董事兼任公司经理。”
+    1. 根据公司法第五十九条（一）、（八）、章程第八条（二）、（十）决定：在离开S1状态时，章程第十四条恢复为“公司设董事会，成员为三人，由股东会选举产生。董事任期 三 年，任期届满，可连选连任。选举方法：采用累积投票制。董事会设董事长一人，由董事会选举产生。”
+    1. 根据公司法第五十七条、第五十九条（一）、（四）、第六十七条（四）、（八）、（十）、章程第八条（二）、（六）、第十五条（五）、（九）决定：在离开S1状态时，S1状态期间的董事起草：
+        1. S1状态期间的财务会计报告；
+        1. S1状态期间的利润分配方案和弥补亏损方案，内容包括公司向执行董事借款的利息及偿还方案；
+        1. S1状态期间董事的报酬。  
+       以上提案由新状态下的董事会讨论通过后，提交股东会审议批准。
+1. S2：增长状态
+    1. 进入S2状态的第一次董事会应该行使公司法第六十七条（七）、（八）、（九）、章程第十五条（八）、（九）、（十）所列的职权。
+    1. 根据公司法第五十九条（八）决定：S2状态下恢复章程第十八条（八），董事会可以对经理授权，并规定行使这些职权的方式和时限，以及相应的奖惩办法。
+1. S3：稳定或缩减状态
+    1. 根据公司法第五十九条（八）决定：S3状态下删去章程第十八条（八），董事会不得在章程以外对经理授权，经理及由经理提名、聘任的人员都严格按章程和基本管理制度、数学模型工作。
+    1. 根据公司法第五十九条决定：S3状态下的数学模型及其代码实现属于基本管理制度，按公司法第六十七条（九）制定，这项职权不得对外授权。
+1. S4：拓展状态
+    1. 新业务按照S2“增长状态”运行。
+    1. 各业务公用的管理规章和数学模型、代码实现，按照“稳定或缩减状态”运行。 
+
+
+# 股东会决议
+
+## S1开始决议
+
+1. 根据公司法第五十九条（八）、第七十五条、章程第八条（二）、（十）修改章程第十四条“公司不设董事会，设一名董事，行使公司法和章程规定的董事会的职权。该董事兼任公司经理。董事任期三年，任期届满，可连选连任。如果任期内董事会席位数发生变化，视为任期提前结束，重新进行选举。选举方法：采用累积投票制。
+    该董事任职期间出现赤字，支出由该董事垫付，记为公司向个人借款。任期结束时，该董事向下一届董事会提交：
+    1. 任职期间的财务会计报告；
+    1. 任职期间的利润分配方案和弥补亏损方案的提案，内容包括公司向董事借款的利息及偿还方案；
+    1. 任职期间董事报酬的提案。
+    并接受下一届董事会制订的方案和报酬。”
+1. 根据公司法第五十九条（一）、章程第十四条，董事会任期提前结束，，选举xxx为董事。
+
+## S1结束决议
+
+1. 根据公司法第五十九条（八）、章程第八条（二）、（十）修改章程第十四条：“公司设董事会，成员为三人，由股东会选举产生。董事任期 三 年，任期届满，可连选连任。如果任期内董事会席位数发生变化，视为任期提前结束，重新进行选举。选举方法：采用累积投票制。董事会设董事长一人，由董事会选举产生。”
+1. 根据公司法第五十九条（一）条、章程第八条（二）选举xxx、xxx、xxx为董事，组成第x届董事会，在第一次董事会会议：
+	1. 根据上一届董事的提案，制订S1状态期间的财务会计报告、利润分配方案和弥补亏损方案、董事的报酬，并提交股东会审议批准。
+	1. 行使公司法第六十七条（七）、（八）、（九）、章程第十五条（八）、（九）、（十）所列的职权。
+
+## S2开始决议
+
+1. 根据公司法第五十九条（八）、章程第八条（十）修改章程第十八条（八）“董事会授予的其他职权，授权时应规定行使这些职权的方式和时限，以及相应的奖惩办法。”
+
+## S3开始决议
+
+1. 根据公司法第五十九条（八）、章程第八条（十）：
+    1. 删去章程第十八条（八）。
+	1. 修改章程第十五条（十）：“制定公司的基本管理制度，包括配套的数学模型及代码；”
+
+## S3结束动议
+
+1. 根据公司法第五十九条（八）、章程第八条（十）：
+    1. 修改章程第十五条（十）：“制定公司的基本管理制度；”
